# qtquick_template

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  LICENSE  README.md  deploy_helper.sh  main.cpp
.github/: copilot-instructions.md
.github/workflows/: cmake.yml
copilot/: app-goals.md  coding-guidelines.md  cpp-qml-type-registration.md  generated_code.md  goals.md  requirements.md  tech-stack.md  testing-guidelines.md
copilot/architecture/: instructions.md
copilot/architecture/input/: idea.md  structure.yaml
copilot/architecture/input/example/: idea.md  structure.puml  structure.yaml
copilot/architecture/output/: dataflow.puml  output.md  structure.puml
copilot/architecture/output/example/: output.md  structure.puml  structure.yaml
copilot/requirements/: instructions.md
copilot/requirements/2_analysis/: instructions.md
copilot/requirements/3_specification/: instructions.md  output.yaml
copilot/requirements/4_validation/: instructions.md
copilot/requirements/5_final/: instructions.md
copilot/requirements/theory/: schema1.json  schema3.yaml
copilot/requirements_analysis/: instructions.md
copilot/requirements_analysis/1_gathering/: input.md  input_sources.md  instructions.md  output.yaml
copilot/requirements_analysis/1_gathering/example/: input.md  output.yaml
copilot/requirements_analysis/2_analysis/: input.yaml  instructions.md  output.yaml  raw_requirements_input.md  structured_requirements.md
copilot/requirements_analysis/2_analysis/example/: input.yaml  output.yaml
copilot/requirements_analysis/3_specification/: input.yaml  instructions.md  output.yaml  requirements_input.md
copilot/requirements_analysis/3_specification/example/: output.yaml
copilot/requirements_analysis/4_validation/: input.yaml  instructions.md  output.yaml  specs_input.md  validation_report.md
copilot/requirements_analysis/4_validation/example/: output.yaml
copilot/requirements_analysis/5_final/: input.yaml  instructions.md  output.yaml  requirements_final.md
copilot/requirements_analysis/5_final/example/: input.yaml  output.yaml
copilot/requirements_analysis/theory/: schema2.json  sources.md  summary.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  qml_type_registration.cpp  qml_type_registration.hpp
src/domain/: CMakeLists.txt
src/domain/include/: domain.hpp
src/domain/src/: domain.cpp
src/domain/tests/: CMakeLists.txt  test_domain.cpp
src/ui/: CMakeLists.txt  QuickView.qml  QuickViewTab.qml  QuickWidgetTab.qml  RootView.qml
src/ui/tests/: CMakeLists.txt  test_ui.cpp  tst_ui.qml
tests/: CMakeLists.txt  test_system.cpp
ui/: CMakeLists.txt
